--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@ body, html {
     height: 100%;
     margin: 0;
     overflow: hidden;
+    color: lavender;
 }
 
 .container {
@@ -9,10 +10,14 @@ body, html {
     justify-content: center;
     align-items: center;
     height: 100%;
+    background-color: #e6e6fa;
+    color: lavender;
     
 }
 
 #3d-viewer {
-    width: 400px; 
-    height: 400px;
+    width: 600px; 
+    height: 600px;
+    background-color: lavender;
+    color: lavender;
 }
